--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,22 @@
-theme: jekyll-theme-tactile
+# Setup
+title       : RD Packages
+tagline     : 'RD Software Packages'
+description : 'Regression Discontinuity Designs Software Packages'
+keywords    : "regression discontinuity designs, program evaluation, causal inference, treatment effects, R, Stata"
+url         : https://rdpackages.github.io
+baseurl     : ''
+paginate    : 5
+
+
+# About and contact
+author:
+  name:           
+  url:            
+
+# Gems
+plugins:
+  - jekyll-paginate
+  - jekyll-gist
+
+# Custom vars
+version:          3.0.0
